2015-09-27	Minor improvement.

		GNUmakefile :
		- now makes $(config.h) define `biting_pear_decltype'

		configure ,
		lolwutconf/c++.inc :
		- now checks for `decltype' support

		include/biting-pear/dawg.h ,
		include/biting-pear/omg.h ,
		test/test-2.ccc :
		- switched from using `__typeof' to using
		  `biting_pear_decltype'

		helper/postpreproc-2.lxx :
		- now rejects non-shortest UTF-8 character encodings
		- now checks for and rejects encodings of UTF-16
		  surrogate code points (\ud800--\udfff)

2015-09-24	Strings and more strings.

		GNUmakefile :
		- now outputs biting_pear_HAVE_CXX_VAR_TPLS macro
		- now runs test programs under en_US.UTF-8 locale
		- added <biting-pear/dawg.h>, <biting-pear/yodawg.h>,
		  test/test-extra-1, test/test-extra-2

		configure :
		- added specific test for C++11 variadic templates

		lolwutconf/c++.inc :
		- added specific test for C++11 variadic templates
		- fixed minor bug in conf_cxx_probe_endianness()
		- fixed minor bug in conf_cxx_chk_compiler_and_executor()

		include/biting-pear/dawg.h ,
		include/biting-pear/yodawg.h ,
		test/test-extra-1.ccc ,
		test/test-extra-1.good ,
		test/test-extra-2.ccc ,
		test/test-extra-2.good :
		- initial version

		include/biting-pear/kthxbai.h :
		- reduced template recursion levels to 3
		- now uses biting_pear_HAVE_CXX_VAR_TPLS

		include/biting-pear/lolwut.h ,
		include/biting-pear/omg.h :
		- reduced template recursion levels to 3

		.gitignore :
		- added test-extra-1 and test-extra-2

2015-09-20	Strings and lines.

		helper/postpreproc-2.lxx :
		- fixed corner cases in handling of strings
		- now parses #line directives and outputs error messages
		  according to them
		- added string splitting construct

2015-09-19	Now cross-compiles everything or nothing.

		GNUmakefile :
		- helper/postproc* -> helper/postpreproc-2*
		- now cross-compiles everything
		- now uses $(conf_Host_exec) to run helper/crc64.cc and
		  helper/postpreproc-2.cc

		helper/postpreproc-2.lxx :