@@ -9,8 +9,8 @@ int main(void)
 	biting_pear::kthxbai?<uint32_t, allow_all> h0 = 0x67452301u;
 	biting_pear::kthxbai?<uint32_t, allow_all> h1 = 0xefcdab89u;
 	biting_pear::kthxbai?<uint32_t, allow_all> h2 = 0x98badcfeu;
-	biting_pear::kthxbai?<uint32_t> h3 = 0x10325476u;
-	biting_pear::kthxbai?<uint32_t> h4 = 0xc3d2e1f0u;
+	biting_pear::kthxbai?<uint32_t, allow_all> h3 = 0x10325476u;
+	biting_pear::kthxbai?<uint32_t, allow_all> h4 = 0xc3d2e1f0u;
 	std::cout << std::hex
 		  << h0 << ' '
 		  << h1 << ' '
